--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<img   src="https://in.images.search.yahoo.com/images/view;_ylt=Awrx.Kt_jTZkEv8MgTG9HAx.;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2I1ZDAxMTI3MDA5OGVkNDVlNDEzNmQ4N2RlMjlmZjE1BGdwb3MDMTkEaXQDYmluZw--?back=https%3A%2F%2Fin.images.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Dheart%2Bimages%26ei%3DUTF-8%26type%3DE210IN885G0%26fr%3Dmcafee%26fr2%3Dsa-gp-search%26tab%3Dorganic%26ri%3D19&w=3809&h=3454&imgurl=www.clipartbest.com%2Fcliparts%2F4cb%2FKRj%2F4cbKRjrzi.png&rurl=http%3A%2F%2Fwww.clipartbest.com%2Fclipart-4cbKRjrzi&size=1257.1KB&p=heart+images&oid=b5d011270098ed45e4136d87de29ff15&fr2=sa-gp-search&fr=mcafee&tt=Heart+PNG+free+images%2C+download+-+ClipArt+Best+-+ClipArt+Best&b=0&ni=160&no=19&ts=&tab=organic&sigr=rCW5VimXyQOB&sigb=KMdZj1lv9lD0&sigi=XRGIg_pNlfj4&sigt=yOyqbj_D0tyd&.crumb=TDnz2m5hUQx&fr=mcafee&fr2=sa-gp-search&type=E210IN885G0" alt="image" height="400" width="400">
        <h1 > Pricing Card </h1>
 	    <p >Price: Rs.200  </p>
-	    <p >Description: Lorem ipsum dolor sit amet,consectetur adipiscing elit</p>
+	    <p >Description: Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
 	     <input  type="submit" value="Buy Now" >
 	
 	
