--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
        <h1 > Pricing Card </h1>
 	    <p >Price: Rs.200  </p>
 	    <p >Description: Lorem ipsum dolor sit amet,consectetur adipiscing elit.</p>
-	     <input  type="submit" value="Buy Now" >
+	     <input  type="button" value="Buy Now" >
 	
 	
 
